# htmlwordpress

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: config.rs  css_optimizer.rs  error.rs  handlers.rs  image_optimizer.rs  main.rs  optimizer.rs  resource_optimizer.rs  schema_generator.rs  seo_optimizer.rs  test_js_extraction.rs  test_verification.rs  webp_converter.rs
