[package]
name = "htmlwordpress-api"
version = "0.1.0"
edition = "2021"
description = "High-performance WordPress optimization API built with Rust"
authors = ["HTMLWordPress"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-br", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML/CSS processing
scraper = "0.18"
lightningcss = "1.0.0-alpha.68"
html5ever = "0.27"
markup5ever_rcdom = "0.3"

# Async utilities
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Environment
dotenvy = "0.15"

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

# Image processing (WebP conversion)
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# HTTP client (for downloading images)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }

# HTML Minification
minify-html = "0.15"
minify-js = "0.5"

# Base64 encoding for image data
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
